fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@
     display: block;
     text-align: center;
     font-family: sans-serif;
-    font-size: 20px;
+    font-size: 2em;
   }
   .welcome {
     display: block;
@@ -108,8 +108,7 @@ body {
   position: relative;
 }
 .main-container {
-  min-height: 100vh;
-  overflow: hidden;
+  min-height: 90vh;
   display: block;
   position: relative;
   padding-bottom: 100px;
