--- a/less/home.less
+++ b/less/home.less
@@ -91,7 +91,7 @@
 			display: block;
 			text-align: center;
 		font-family: sans-serif ;
-			font-size:20px;
+			font-size:2em;
 		}
 		
 			.welcome{ 
@@ -147,8 +147,7 @@
 
 }
 .main-container {
- min-height: 100vh; 
- overflow: hidden;
+ min-height: 90vh; 
  display: block;
  position: relative;
  padding-bottom: 100px; 
